# Hasami-shogi

./: run.py
backend/: CMakeLists.txt
backend/biuld/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  hasami_shogi.sln  hasami_shogi.vcxproj  hasami_shogi.vcxproj.filters
backend/biuld/Release/: hasami_shogi.exp  hasami_shogi.lib
backend/biuld/hasami_shogi.dir/Release/: hasami_shogi.dll.recipe
backend/biuld/hasami_shogi.dir/Release/hasami_shogi.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  hasami_shogi.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
backend/biuld/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
backend/biuld/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
backend/biuld/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
backend/biuld/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
backend/include/: board.hpp  exports.hpp  game.hpp  piece.hpp  types.hpp
backend/src/: board.cpp  exports.cpp  game.cpp  piece.cpp
frontend/: cpp_bridge.py
frontend/controllers/: game_controller.py
frontend/gui/: board_view.py  game_window.py  main_window.py
